added true baseline, retested on c7a